Fix skills icons visibility and add missing JS helpers

--- a/css/style_skills.css
+++ b/css/style_skills.css
@@ -8,6 +8,7 @@
     src: url('../fonts/woff2/LINESeedKR-Rg.woff2') format('woff2-variations');
 }
 
+
 @font-face {
     font-family: 'LINE SEED Sans';
     font-weight: 700;
@@ -183,6 +184,7 @@ main h1 {
     width: auto;
     height: 50px;
     display: block;
+    opacity: 1;
 }
 
 .skills-list .skills-list-detail span {
